--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="col-md-10 col-md-offset-1" style="margin-top:20px">
    <div class="panel panel-primary">
      <div class="panel-heading">
-       <h3 class="panel-title">Welcome To My Demo App</h3>
+       <h3 class="panel-title">Welcome K8s with GCE by Calvine</h3>
      </div>
       <div class="panel-body">
        <div class="alert alert-success">
@@ -16,12 +16,7 @@
           <p>If this change is reflected, then the CI/CD pipeline is functional... 👏🏿 😈 </p>
           <p>And it worked</p>
        </div>
-         <div class="col-md-9">
-           <p>Author:</p>
-           <div class="col-md-3">
-             <a href="https://twitter.com/delan_hype">@delan_hype</a>
-           </div>
-         </div>
+         
       </div>
   </div>
   </div>
